PSQLADM-420 Typo in release notes (2.4.3)
modified docs/2.4.3.md

--- a/docs/2.4.3.md
+++ b/docs/2.4.3.md
@@ -28,7 +28,7 @@ For more information on these items and other improvements and bug fixes, see th
     
 ## Bug Fixes
 
-* [psqladm-402](https://jira.percona.com/browse/psqladm-402): The `proxysql-status` command did not work as intended. The script had a requirement to pass the cnf.file but this requirement is no longer needed.
+* [psqladm-402](https://jira.percona.com/browse/psqladm-402): The `proxysql-status` command did not work as intended. The script had a requirement to pass the .cnf file but this requirement is no longer needed.
 
 * [psqladm-419](https://jira.percona.com/browse/PSQLADM-419): The CVE-2021-38561 was found in a library used by `pxc_scheduler_handler`. The appropriate patch was applied.
 
