PSQLADM-440 Update docs based on Percona style guide

--- a/docs/2.4.2.md
+++ b/docs/2.4.2.md
@@ -14,7 +14,7 @@ The [Percona Scheduler Admin (percona-scheduler-admin)](https://docs.percona.com
     capabilities then *ProxySQL admin*. Do not use the options from one 
     tool in the other tool. Mixing the options may cause unintended results.
 
-## Release Highlights
+## Release highlights
 
 This release includes all features and bug fixes available in ProxySQL 2.4.0, ProxySQL 2.4.1, and ProxySQL 2.4.2. 
 
