--- a/docs/2.4.3.md
+++ b/docs/2.4.3.md
@@ -12,7 +12,7 @@ The [Percona Scheduler Admin (percona-scheduler-admin)](https://docs.percona.com
 
     Percona Scheduler admin has different features and capabilities than  ProxySQL admin. Do not use the options from one tool in the other tool. Mixing the options may cause unintended results.
 
-## Release Highlights
+## Release highlights
 
 This release includes all features and bug fixes available in ProxySQL 2.4.3. The improvements and bug fixes introduced by *ProxySQL* and included in this release are:
 
@@ -26,7 +26,7 @@ For more information on these items and other improvements and bug fixes, see th
 
     An upgrade from ProxySQL 1.x.x to ProxySQL 2.x.x requires the removal of the ProxySQL 1.x.x packages. You can upgrade to ProxySQL 2.x.x after completing the removal.
     
-## Bug Fixes
+## Bug fixes
 
 * [psqladm-402](https://jira.percona.com/browse/psqladm-402): The `proxysql-status` command did not work as intended. The script had a requirement to pass the .cnf file but this requirement is no longer needed.
 
