--- a/docs/2.4.4.md
+++ b/docs/2.4.4.md
@@ -12,7 +12,7 @@ The [Percona Scheduler Admin (percona-scheduler-admin)](https://docs.percona.com
 
     Percona Scheduler admin has different features and capabilities than ProxySQL admin. Do not use the options from one tool in the other tool. Mixing the options may cause unintended results.
 
-## Release Highlights
+## Release highlights
 
 This release includes all features and bug fixes available in ProxySQL 2.4.4. The improvements and bug fixes introduced by *ProxySQL* and included in this release are:
 
