PSQLADM-460 docs:rename pages to align
	renamed:    docs/build-percona-scheduler-admin.md -> docs/build-psh.md
	renamed:    docs/percona-scheduler-admin-configuration.md -> docs/psh-configuration.md
	renamed:    docs/percona-scheduler-admin-options-detail.md -> docs/psh-detailed-options.md
	renamed:    docs/percona-scheduler-admin-known-limitations.md -> docs/psh-known-limitations.md
	renamed:    docs/percona-scheduler-admin-statements-options.md -> docs/psh-options.md
	renamed:    docs/percona-scheduler-admin.md -> docs/psh-overview.md
	modified:   mkdocs-base.yml

--- a/docs/2.4.4-1.2.md
+++ b/docs/2.4.4-1.2.md
@@ -19,7 +19,7 @@
 
 | Release date | November 08, 2022 |
 |---|---|
-| Install instructions | [ProxySQL and proxysql-admin](https://docs.percona.com/proxysql/install-v2.htm) |
+| Install instructions | [ProxySQL and proxysql-admin](https://docs.percona.com/proxysql/install-v2.html) |
 | Download this version | [ProxySQL 2.x](https://www.percona.com/downloads/proxysql2/) |
 
 [ProxySQL](https://proxysql.com/) is a high-performance proxy for MySQL and MySQL-compatible database servers such as Percona Server for MySQL and MariaDB. It acts as an intermediary for client requests seeking resources from the database. ProxySQL was created for the database administrator as a solution for complex replication topology issues. 
