--- a/docs/2.4.7.md
+++ b/docs/2.4.7.md
@@ -11,7 +11,7 @@ You can [download the original ProxySQL from GitHub](https://github.com/sysown/p
 
 The [ProxySQL Admin (proxysql-admin)](proxysql-admin-tool-v2-config.md) utility simplifies the configuration of Percona XtraDB Cluster nodes with ProxySQL. [ProxySQL Admin 1.x.x](proxysql-v1.md) requires custom `Bash` scripts to track the status of a Percona XtraDB Cluster. [ProxySQL Admin 2.x.x](proxysql-admin-tool-functions.md) supports Percona XtraDB Cluster without custom scripts.
 
-The [ProxySQL 2.x.x and pxc_scheduler_handler](psh-overview.md) tool can automatically perform a failover due to node failures, service degradation, or maintenance. Percona Scheduler admin has different features and capabilities than ProxySQL admin. Do not use the options from one tool in the other tool. Mixing the options may cause unintended results.
+The [ProxySQL 2.x.x and pxc_scheduler_handler](psh-overview.md) tool can automatically perform a failover due to node failures, service degradation, or maintenance. The pxc_scheduler_handler tool has different features and capabilities than ProxySQL admin. Do not use the options from one tool in the other tool. Mixing the options may cause unintended results.
 
 For [training](https://www.percona.com/training), contact [Percona Training - Start learning now](https://learn.percona.com/contact-me).
 
