PSQLADM-469 2.5.1 Release notes and release note tasks modified:   docs/2.4.8.md 	new file:   docs/2.5.1.md 	modified:   docs/release-notes.md 	modified:   mkdocs-base.yml 	modified:   variables.yml

--- a/docs/2.5.1.md
+++ b/docs/2.5.1.md
@@ -1,9 +1,9 @@
-# ProxySQL 2.4.8 and ProxySQL admin tools (2023-03-15)
+# ProxySQL 2.5.1 and ProxySQL admin tools (2023-04-17)
 
-| Release date | March 15, 2023 |
+| Release date | April 17, 2023 |
 |---|---|
 | Install instructions | [ProxySQL and proxysql-admin](https://docs.percona.com/proxysql/install-v2.html) |
-| Download this version | [ProxySQL 2.x](https://www.percona.com/downloads/proxysql2/) |
+| Download this version | [ProxySQL 2](https://www.percona.com/download-proxysql) using the [instructions](https://docs.percona.com/proxysql/where-to-download-proxysql.html)|
 
 [ProxySQL](https://proxysql.com/) is a high-performance proxy for MySQL and MySQL-compatible database servers such as Percona Server for MySQL and MariaDB. It acts as an intermediary for client requests seeking resources from the database. ProxySQL was created for the database administrator as a solution for complex replication topology issues. 
 
@@ -15,11 +15,31 @@ The [ProxySQL 2.x.x and pxc_scheduler_handler](psh-overview.md) tool can automat
 
 ## Release highlights
 
-This release includes all security fixes available in ProxySQL 2.4.8. The security fix introduced by ProxySQL and included in this release is:
+Compared to the previous ProxySQL 2.4.8 release, this release includes all improvements and bug fixes available in ProxySQL 2.5.0 and ProxySQL 2.5.1.
 
-* OpenSSL was updated to 3.0.8.
+The improvements and bug fixes introduced by ProxySQL 2.5.0 and included in this release are:
 
-For more information on these items and other improvements and bug fixes, see the ProxySQL [2.4.8 release notes](https://github.com/sysown/proxysql/releases/tag/v2.4.8).
+* Native Group Replication monitoring is supported for MySQL-8. 
+
+* Added a new `mysql_hostgroup_attributes` feature with support for the following attributes:
+
+    * `mysql_hostgroup_attributes.multiplex`
+
+    * `mysql_hostgroup_attributes.free_connections_pct`
+
+    * `mysql_hostgroup_attributes.throttle_connections_per_sec`
+
+* Fixed memory leaks related to `load_mysql_servers_to_runtime`.
+
+The improvements and bug fixes introduced by ProxySQL 2.5.1 and included in this release are:
+
+* `mysql_hostgroup_attributes.init_connect` option is supported.
+
+* Multiple binlog clients support consuming events via the same `username`.
+
+* Fix for when connections were killed due to invalid `max_transaction_time` tracking.
+
+For more information on these items and other improvements and bug fixes, see the ProxySQL [2.5.0 release notes](https://github.com/sysown/proxysql/releases/tag/v2.5.0) and the ProxySQL [2.5.1 release notes](https://github.com/sysown/proxysql/releases/tag/v2.5.1).
 
 ProxySQL Admin and pxc_scheduler_handler have not changed since the previous release.
 
