--- a/docs/2.6.5.md
+++ b/docs/2.6.5.md
@@ -1,4 +1,4 @@
-# ProxySQL 2.6.4 and ProxySQL admin tools (2024-09-)
+# ProxySQL 2.6.5 and ProxySQL admin tools (2024-09-12)
 
 [Download](https://www.percona.com/download-proxysql)<br>
 [Install](install-v2.md)<br>
@@ -14,11 +14,22 @@ The [ProxySQL 2 and pxc_scheduler_handler](psh-overview.md) tool can automatical
 
 ## Release highlights
 
-Compared to the previous [ProxySQL 2.6.3 release], this release includes all improvements and bug fixes available in [ProxySQL 2.6.4].
+Compared to the previous [ProxySQL 2.6.3 release], this release includes all improvements and bug fixes available in [ProxySQL 2.6.4] and [ProxySQL 2.6.5].
+
+In this release, we are skipping ProxySQL 2.6.4. We are releasing ProxySQL 2.6.5, which is the latest ProxySQL release. This decision ensures that you receive the most up-to-date features and improvements.
 
 * Upgraded OpenSSL to version 3.3.1.
 
 * Added compatibility for Ubuntu 24 and Fedora 40.
+
+* The system now correctly handles the `USE` command when it ends with a semicolon. It removes any trailing semicolon automatically. Additionally, the system will now return an error if someone tries to use the USE command as part of a multi-statement query.
+
+* In versions 2.5.2 through 2.6.4, the `stats_mysql_query_digest.digest` feature generated lowercase output when it should have been uppercase.
+
+
+## Bug fixes
+
+* [PSQLADM-518](https://perconadev.atlassian.net/browse/PSQLADM-518): Adds a systemd unit `proxysql-initial.service` that can be used to re-initialize ProxySQL from the config file (after first startup the DB file is used instead of the config file). For usage, please refer to [ProxySQL Getting Started - Reinitializing ProxySQL from the config file](https://proxysql.com/documentation/getting-started/#:~:text=Reinitializing%20ProxySQL%20from%20the%20config%20file])
 
 ## Additional resources
 
@@ -29,3 +40,4 @@ Compared to the previous [ProxySQL 2.6.3 release], this release includes all imp
 
 [ProxySQL 2.6.3 release]: https://docs.percona.com/proxysql/2.6.3.html
 [ProxySQL 2.6.4]: https://github.com/sysown/proxysql/releases/tag/v2.6.4
+[ProxySQL 2.6.5]: https://github.com/sysown/proxysql/releases/tag/v2.6.5
