--- a/docs/2.7.1.md
+++ b/docs/2.7.1.md
@@ -1,4 +1,4 @@
-# ProxySQL 2.7.1 and ProxySQL admin tools (2024-10-)
+# ProxySQL 2.7.1 and ProxySQL admin tools (2024-10-28)
 
 [Download](https://www.percona.com/download-proxysql)<br>
 [Install](install-v2.md)<br>
