--- a/docs/2.7.1.md
+++ b/docs/2.7.1.md
@@ -30,6 +30,11 @@ Compared to the previous [ProxySQL 2.6.5 release], this release includes all imp
 
 * The DNS caching feature is turned off automatically when ProxySQL is started with the `-M` or `--no-monitor` option.
 
+In an MySQL 8.4 or Percona Server for MySQL 8.4 environment, you may have the following issues:
+
+* ProxySQL contains counters that have not been updated to use the new terminology. Unexpected results may occur
+* The binlog reader errors out during initialization due to the use of the old terminology, such as SHOW MASTER STATUS command.
+
 ## Bug fixes
 
 * [PSQLADM-525]: Use the HEX() and UNHEX() functions to convert password fields. This ability will help fix problems with escape characters and other special symbols.
