--- a/docs/2.7.1.md
+++ b/docs/2.7.1.md
@@ -10,7 +10,7 @@ You can [download the original ProxySQL from GitHub](https://github.com/sysown/p
 
 The [ProxySQL Admin (proxysql-admin)](proxysql-admin-tool-v2-config.md) tool simplifies the configuration of Percona XtraDB Cluster nodes with ProxySQL. [ProxySQL Admin 1](proxysql-v1.md) requires custom `Bash` scripts to track the status of a Percona XtraDB Cluster. [ProxySQL Admin 2](proxysql-admin-tool-functions.md) supports Percona XtraDB Cluster without custom scripts.
 
-The [ProxySQL 2 and pxc_scheduler_handler](psh-overview.md) tool can automatically perform a failover due to node failures, service degradation, or maintenance. The pxc_scheduler_handler tool has different features and capabilities than ProxySQL admin. Do not use the options from one tool in the other tool. Mixing the options may cause unintended results.
+The [ProxySQL 2 and pxc_scheduler_handler](psh-overview.md) tool can automatically perform a failover due to node failures, service degradation, or maintenance. The pxc_scheduler_handler tool has features and capabilities that are different from those of the ProxySQL admin. Do not use the options from one tool in the other tool. Mixing the options may cause unintended results.
 
 ## Release highlights
 
@@ -28,16 +28,18 @@ Compared to the previous [ProxySQL 2.6.5 release], this release includes all imp
 
 * If a MySQL connection fails or times out for a certain hostname, the DNS record for that hostname is removed. This removal prevents keeping old or invalid DNS records. 
 
-* The DNS caching feature is turned off automatically when ProxySQL is started with the `-M` or `--no-monitor` option.
-
-In an MySQL 8.4 or Percona Server for MySQL 8.4 environment, you may have the following issues:
-
-* ProxySQL contains counters that have not been updated to use the new terminology. Unexpected results may occur
-* The binlog reader errors out during initialization due to the use of the old terminology, such as SHOW MASTER STATUS command.
+* The DNS caching feature is automatically turned off when ProxySQL starts with the `-M` or `--no-monitor` option.
 
 ## Bug fixes
 
 * [PSQLADM-525]: Use the HEX() and UNHEX() functions to convert password fields. This ability will help fix problems with escape characters and other special symbols.
+
+## Known issues
+
+In a MySQL 8.4 or a Percona Server for MySQL 8.4 environment, you may have the following issues:
+
+* ProxySQL contains counters that have not been updated to use the new terminology. Unexpected results may occur
+* The binlog reader errors out during initialization due to the use of the old terminology, such as `SHOW MASTER STATUS` command.
 
 ## Additional resources
 
