--- a/docs/2.7.1.md
+++ b/docs/2.7.1.md
@@ -8,7 +8,7 @@
 
 You can [download the original ProxySQL from GitHub](https://github.com/sysown/proxysql/releases). The [ProxySQL documentation](https://proxysql.com/documentation/) provides information on installing and running ProxySQL.
 
-The [ProxySQL Admin (proxysql-admin)](proxysql-admin-tool-v2-config.md) tool simplifies the configuration of Percona XtraDB Cluster nodes with ProxySQL. [ProxySQL Admin 1](proxysql-v1.md) requires custom `Bash` scripts to track the status of a Percona XtraDB Cluster. [ProxySQL Admin 2](proxysql-admin-tool-functions.md) supports Percona XtraDB Cluster without custom scripts.
+The [ProxySQL Admin (proxysql-admin)](proxysql-admin-tool-v2-config.md) tool simplifies the configuration of Percona XtraDB Cluster nodes with ProxySQL. [ProxySQL Admin 2.x.x](proxysql-admin-tool-functions.md) supports Percona XtraDB Cluster without custom scripts.
 
 The [ProxySQL 2 and pxc_scheduler_handler](psh-overview.md) tool can automatically perform a failover due to node failures, service degradation, or maintenance. The pxc_scheduler_handler tool has features and capabilities that are different from those of the ProxySQL admin. Do not use the options from one tool in the other tool. Mixing the options may cause unintended results.
 
