PSQLADM-561 [DOCS] - update release notes
	modified:   docs/2.7.3.md
	modified:   snippets/rn-block-top.md

--- a/docs/2.7.3.md
+++ b/docs/2.7.3.md
@@ -1,10 +1,10 @@
-# ProxySQL 2.7.3 and ProxySQL admin tools (2025-04-21)
+# Percona's build of ProxySQL 2.7.3 and ProxySQL admin tools (2025-04-21)
 
 --8<--- "rn-block-top.md"
 
 ## Release highlights
 
-In this release, we are skipping [ProxySQL 2.7.2]. We are releasing ProxySQL 2.7.3., which is the latest ProxySQL release. This decision ensures that you receive the most up-to-date features and improvements. Compared to the previous [ProxySQL 2.7.1-1 release], this release includes all improvements and bug fixes available in [ProxySQL 2.7.2] and [ProxySQL 2.7.3].
+This release introduces Percona's build of ProxySQL 2.7.3, incorporating the latest upstream features and improvements. Instead of releasing a Percona build of ProxySQL 2.7.2, we are skipping to 2.7.3. This version includes all enhancements and bug fixes from upstream [ProxySQL 2.7.2] and [ProxySQL 2.7.3].
 
 * Added a configurable feature for logging and analyzing events and queries, providing real-time understanding of how applications are interacting with the database and its performance.
 
@@ -18,10 +18,9 @@ In this release, we are skipping [ProxySQL 2.7.2]. We are releasing ProxySQL 2.7
 
 ### No changes
 
-The [ProxySQL Admin] tool and the [pxc_scheduler_handler] tool have not changed since the previous release.
+The [ProxySQL Admin] tool and the [pxc_scheduler_handler] tool within Percona's Build of ProxySQL 2.7.3 have not been updated and are the same as in the previous Percona release.
 
 ## Additional resources
-
 --8<--- "rn-ar.md"
 
 [ProxySQL 2.7.1-1 release]: https://docs.percona.com/proxysql/2.7.1-1.html
