PSQLADM-562 [DOCS] - Update release notes snippet
 Changes to be committed:
	modified:   docs/2.5.5-1.2.md
	modified:   docs/2.6.2.md
	modified:   docs/2.6.3.md
	modified:   docs/2.6.5.md
	modified:   docs/2.7.1-1.md
	modified:   docs/2.7.1.md
	modified:   docs/2.7.3.md
	modified:   docs/install-proxysql2-tarball.md
	modified:   docs/install-v2.md
	new file:   snippets/note-8.4.md
	modified:   snippets/rn-block-top.md

--- a/docs/2.7.1-1.md
+++ b/docs/2.7.1-1.md
@@ -1,4 +1,4 @@
-# ProxySQL 2.7.1-1 and ProxySQL admin tools (2024-11-20)
+#  Percona's build of ProxySQL 2.7.1-1 and ProxySQL admin tools (2024-11-20)
 
 --8<--- "rn-block-top.md"
 
@@ -8,11 +8,7 @@ This version updates the admin tools to support Percona XtraDB Cluster 8.4.0-1.
 
 ## Known issues
 
-In a MySQL 8.4 or a Percona Server for MySQL 8.4 environment, you may have the following issues:
-
-* ProxySQL contains counters that have not been updated to use the new terminology. You may see unexpected results
-
-* The binlog reader errors out during initialization due to the use of the old terminology, such as `SHOW MASTER STATUS` command.
+--8<--- "note-8.4.md"
 
 ## Additional resources
 
