--- a/docs/2.7.1.md
+++ b/docs/2.7.1.md
@@ -1,16 +1,6 @@
-# ProxySQL 2.7.1 and ProxySQL admin tools (2024-10-28)
+#  Percona's build of ProxySQL 2.7.1 and ProxySQL admin tools (2024-10-28)
 
-[Download](https://www.percona.com/download-proxysql)<br>
-[Install](install-v2.md)<br>
-[View the GitHub repository](https://github.com/percona/proxysql-admin-tool)
-
-[ProxySQL](https://proxysql.com/) is a high-performance proxy for MySQL and MySQL-compatible database servers such as Percona Server for MySQL and MariaDB. It acts as an intermediary for client requests seeking resources from the database. ProxySQL was created for the database administrator to solve complex replication topology issues.
-
-You can [download the original ProxySQL from GitHub](https://github.com/sysown/proxysql/releases). The [ProxySQL documentation](https://proxysql.com/documentation/) provides information on installing and running ProxySQL.
-
-The [ProxySQL Admin (proxysql-admin)](proxysql-admin-tool-v2-config.md) tool simplifies the configuration of Percona XtraDB Cluster nodes with ProxySQL. [ProxySQL Admin 2.x.x](proxysql-admin-tool-functions.md) supports Percona XtraDB Cluster without custom scripts.
-
-The [ProxySQL 2 and pxc_scheduler_handler](psh-overview.md) tool can automatically perform a failover due to node failures, service degradation, or maintenance. The pxc_scheduler_handler tool has features and capabilities that are different from those of the ProxySQL admin. Do not use the options from one tool in the other tool. Mixing the options may cause unintended results.
+--8<--- "rn-block-top.md"
 
 ## Release highlights
 
@@ -36,10 +26,7 @@ Compared to the previous [ProxySQL 2.6.5 release], this release includes all imp
 
 ## Known issues
 
-In a MySQL 8.4 or a Percona Server for MySQL 8.4 environment, you may have the following issues:
-
-* ProxySQL contains counters that have not been updated to use the new terminology. Unexpected results may occur
-* The binlog reader errors out during initialization due to the use of the old terminology, such as `SHOW MASTER STATUS` command.
+--8<--- "note-8.4.md"
 
 ## Additional resources
 
