--- a/docs/2.7.3.md
+++ b/docs/2.7.3.md
@@ -16,9 +16,13 @@ This release introduces Percona's build of ProxySQL 2.7.3, incorporating the lat
 
 * Fixed issues with DELETE operations in the stats memory database, improving reliability during maintenance tasks.
 
-### No changes
+## No changes
 
 The [ProxySQL Admin] tool and the [pxc_scheduler_handler] tool within Percona's Build of ProxySQL 2.7.3 have not been updated and are the same as in the previous Percona release.
+
+## Known issues
+
+--8<--- "note-8.4.md"
 
 ## Additional resources
 --8<--- "rn-ar.md"
